--- a/templates/main.html
+++ b/templates/main.html
@@ -148,7 +148,7 @@
            <div class="container2" id="guidelines">
             <div class="alert-alert-success" role="alert" >
               <h2 class="alert-heading">Guidelines:</h2>
-              <p>The model predicts the type of fault in the three phase transmission line. Provide the values of corrent and voltage of respective phases accordingly. The types of faults predicted are: </p>
+              <p>The model predicts the type of fault in the three phase transmission line. Provide the values of current and voltage of respective phases accordingly. The types of faults predicted are: </p>
               <hr>
               <p class="mb-0">No Fault</p>
               <p class="mb-0">LL Fault (Between phase A and B)</p>
